@@ -1,3 +1,8 @@
+1998-11-15  Alex Roberts  <bse@dial.pipex.com>
+
+	* src/gE_prefs_box.c: Prefrerences now work in non-Gnome
+	  (it's taken me over 3 hours to get this damn thing to work!)..
+
 1998-11-08  Chris Lahey  <clahey@umich.edu>
 
 	* src/gedit.c (main): Switched to popt.
